...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.detailsFragment.DetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/details_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:backgroundTint="@color/main_color">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/details_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.4"
                android:scaleType="centerCrop"
                android:src="@drawable/anibackground"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:menu="@menu/details_fragment_menu" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/details_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_50dp"
            app:layoutDescription="@xml/details_zoom">

            <TextView
                android:id="@+id/original_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:gravity="center"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/anime_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Dragon’s Dogma" />

            <ImageView
                android:id="@+id/anime_image"
                style="@style/detailsEnImage"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:id="@+id/release_Data"
                style="@style/detailsEnData"
                tools:text="data" />

            <TextView
                android:id="@+id/release_Author"
                style="@style/parameters"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/release_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/anime_image"
                app:layout_constraintTop_toBottomOf="@id/release_Data"
                tools:text="author" />

            <TextView
                android:id="@+id/release_rating"
                style="@style/parameters"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/release_age_rate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/anime_image"
                app:layout_constraintTop_toBottomOf="@id/release_Author"
                tools:text="rating" />

            <TextView
                android:id="@+id/release_age_rate"
                style="@style/parameters"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/series_quantity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/anime_image"
                app:layout_constraintTop_toBottomOf="@id/release_rating"
                tools:text="age rate" />

            <TextView
                android:id="@+id/series_quantity"
                style="@style/parameters"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/release_Genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/anime_image"
                app:layout_constraintTop_toBottomOf="@+id/release_age_rate"
                tools:text="episodes" />

            <TextView
                android:id="@+id/release_Genre"
                style="@style/parameters"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/english_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/release_age_rate"
                tools:text="genre" />

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/_250dp" />

            <ImageView
                android:id="@+id/details_description_image"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_0dp"
                android:layout_marginTop="@dimen/_10dp"
                android:alpha="0.1"
                android:scaleType="centerCrop"
                android:src="@drawable/anibackground"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="center"
                android:textSize="@dimen/_30sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/descriptionLabel"
                app:layout_constraintTop_toBottomOf="@id/english_title"
                tools:text="Russian title" />

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15_dp"
                android:text="@string/description"
                app:layout_constraintBottom_toTopOf="@id/description_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/russian_title" />


            <TextView
...
